--- a/compose.yaml
+++ b/compose.yaml
@@ -4,3 +4,8 @@ services:
     container_name: nginxwebsvr
     ports:
     - "80:80"
+  mysqldb:
+    image: mysql:5.7
+    restart: always
+    volumes:
+    - ./mysql_data:/var/lib/mysql
