--- a/compose.yaml
+++ b/compose.yaml
@@ -9,3 +9,8 @@ services:
     restart: always
     volumes:
     - ./mysql_data:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: pass
+      MYSQL_DATABASE: testdb
+      MYSQL_USER: user
+      MYSQL_PASSWORD: pass
