--- a/compose.yaml
+++ b/compose.yaml
@@ -14,3 +14,12 @@ services:
       MYSQL_DATABASE: testdb
       MYSQL_USER: user
       MYSQL_PASSWORD: pass
+  git-server:
+    build:
+      dockerfile: gitserver.Dockerfile
+      context: .
+    restart: always
+    ports:
+    - "3000:3000"
+    volumes:
+    - ./repos:/var/www/git
